2010-11-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm demo/html/webify_canvas.pl
	term/js/gnuplot_common.js term/js/gnuplot_dashedlines.js:
	Add support for dashed lines and rounded/butt line properties.

2010-11-24  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm term/js/gnuplot_common.js term/js/gnuplot_mouse.js:
	Revamp the javascript support for the HTML5 canvas terminal.
	Move all global variables into a single object "gnuplot" declared in
	gnuplot_common.js.  This revision also adds polar mode mousing support.

	* demo/html/Makefile.canvas demo/html/index.canvas 
	demo/html/mouseable.dem demo/html/mousebox.template 
	demo/html/webify_canvas.pl:
	Revamp the demos and build scripts to use the new javascript syntax.

	See tracker item #3058147

2010-11-23  Ethan A Merritt  <merritt@u.washington.edu>

	* term/js/gnuplot_common.js:  Rotated text should be zoom-able also.

	* term/js/gnuplot_mouse.js:  Konqueror (webkit?) implementation of ctx
	does not like negative values of width or height.

	* src/eval.c (fill_gpval_axis) term/canvas.trm:
	Export polar axis limits and logscale status for external mousing.

2010-11-20  Casey Carter   <ctcarter@users.sourceforge.net>

	* demo/html/index.canvas demo/html/index.save demo/html/index.svg 
	term/canvas.trm:  syntax error in link record of standalone mode.

2010-11-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/command.c src/eval.c src/graphics.c
 	src/misc.c src/mouse.c src/plot2d.c src/save.c src/set.c src/setshow.h
	src/show.c src/tables.c src/tables.h src/unset.c
 	demo/polar.dem demo/poldat.dem docs/gnuplot.doc:

	Improved support for polar coordinate mode. 
	The polar axis gets syntax and properties equivalent to the x/y/z axes.
	- set/unset raxis (always drawn through the origin)
	- set rrange controls the extent of the axes and of the plot itself;
	  the xrange and yrange are set to match, but can be changed afterward